# track-upload

./: .gitignore  Anchor.toml  README.md
app/: package-lock.json  package.json
app/components/: Track.tsx  WalletAdapter.tsx
app/pages/: index.tsx
app/styles/: globals.css
programs/track-upload/: Cargo.toml
programs/track-upload/src/: lib.rs
tests/: track-upload.ts
